--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "axe-protractor",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "description": "Run axe-core accessibility audits inside of protractor",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
